# BD-Rust-Hackathon-Sept-2023

./: .env  Cargo.toml  Makefile  queries_test.sh
migrations/: 0001_create_tables.sql  0002_populate_users.sql
src/: custom_error.rs  lib.rs  main.rs  startup.rs
src/routes/: create_user.rs  get_users.rs  market.rs  mod.rs  order.rs  price.rs  user.rs  users.rs
