[package]
name = "tard_fi_data"
version = "0.1.0"
edition = "2021"

[lib]
name = "tard_fi_data"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tard_fi_data"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
anyhow = "1.0.75"
thiserror = "1.0.49"
yahoo_finance_api = "2.1.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
